@startuml

' Personnalisation des stéréotypes PK et FK :
skinparam class {
    StereotypeFontColor<<PK>> Black
    StereotypeFontColor<<FK>> Black
    StereotypeBackgroundColor<<PK>> YellowGreen
    StereotypeBackgroundColor<<FK>> LightSkyBlue
    SterotypeBorderColor<<PK>> Black
    SterotypeBorderColor<<FK>> Black
}

' ---------------------------------
' Définition des entités (tables) :
' ---------------------------------

entity rollercoasters #FFB84D {
    <<PK>> rollercoaster_id : INTEGER
    --
    nom : VARCHAR(50)
    structure : ENUM <<bois, acier>>
    type : ENUM <<sit down, inverted, wing, ...>>
    date_ouverture : YEAR
    hauteur : DECIMAL(4,1)
    --
    <<FK>> fk_constructeur_id : INTEGER
    <<FK>> fk_parc_id : INTEGER
}

entity constructeurs #7FDB67 {
    <<PK>> constructeur_id : INTEGER
    --
    nom : VARCHAR(50)
    adresse : VARCHAR(255)
    url_site_web : VARCHAR(255)
    url_facebook : VARCHAR(255)
    url_instagram : VARCHAR(255)
    url_linked_in : VARCHAR(255)
    date_creation : YEAR
    --
    <<FK>> fk_ville_id : INTEGER
}

entity parcs #4DA8FF {
    <<PK>> parc_id : INTEGER
    --
    nom : VARCHAR(50)    
    date_ouverture : INTEGER
    superficie : INTEGER
    --
    <<FK>> fk_ville_id : INTEGER
}

entity villes #FF99FF {
    <<PK>> ville_id : INTEGER
    --
    nom : VARCHAR(50)
    --
    <<FK>> fk_pays_id : INTEGER
}

entity pays #FF6666 {
    <<PK>> pays_id : INTEGER
    --
    nom : VARCHAR(50)
}

entity compositions #A4F0FF {
    <<PK>> <<FK>> fk_rollercoaster_id : INTEGER
    <<PK>> <<FK>> fk_element_id : INTEGER
    --
    nombre : INTEGER
}

entity elements #FF6666 {
    <<PK>> element_id : INTEGER
    --
    nom : VARCHAR(50)
}

entity frequentations #D0D0FF {
    <<PK>> annee : YEAR
    <<PK>> <<FK>> fk_parc_id : INTEGER
    --
    nombre_visiteurs : INTEGER
}


' --------------------------------------------
' Définition des relations entre les entités :
' --------------------------------------------


' COMPLETER ICI LES 4 RELATIONS MANQUANTES
rollercoasters }o--|| constructeurs : "FK"
rollercoasters }o--|| parcs : "FK"
rollercoasters }o--|| villes : "FK"
compositions }o--|| rollercoasters : "FK"
compositions }o--|| elements : "FK"
frequentations }o--|| parcs : "FK"
parcs }o--|| villes : "FK"
villes }|--|| pays : "FK"


' ---------------------------------------------------------
' Annotations sur les types ou autres informations utiles :
' ---------------------------------------------------------

note right of rollercoasters
    structure : bois, acier
    type : sit down, inverted, wing, ...
end note

note right of parcs
    date_ouverture ne peut pas être de type YEAR
    car certains parcs sont trop âgés
end note

note right of elements
    Exemple : Looping plongeant
end note

@enduml
